--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="sm: w-[100%] sm: h-[10vh] sm: flex sm: justify-around       md:w-[100%] md:h-[10vh] md:justify-around md:flex items-center">
         <div class="flex items-center">
           <span
-            class="text-[white] font-serif md:font-extrabold border-[1px] border-[lawngreen] bg-[#44cf44] sm: w-[6vw] sm: h-[6vh]  md:w-[3vw] md:h-[5vh] rounded-[20%] flex items-center justify-center text-[4vh]"
+            class="text-[white] sm: font-medium md:text-[4vh] sm: text-[2vh] font-serif md:font-extrabold border-[1px] border-[lawngreen] bg-[#44cf44] sm: w-[6vw] sm: h-[4vh]  md:w-[3vw] md:h-[5vh] rounded-[20%] flex items-center justify-center "
             >S</span
           >
           <h1 class="md:font-semibold">Ushi</h1>
@@ -41,7 +41,7 @@
           </div>
 
           <div
-            class="bg-[#44cf44] text-[white] sm: text-[1vh] md:text-[3vh] sm: w-[15vw] sm: h-[6vh] rounded-[20px] gap-2 md:w-[10vw] md:h-[6vh] flex items-center justify-center"
+            class="bg-[#44cf44] text-[white] sm: text-[1vh] md:text-[3vh] sm: w-[22vw] sm: h-[6vh] rounded-[20px] gap-2 md:w-[10vw] md:h-[6vh] flex items-center justify-center"
           >
             <i class="bx bx-cart"></i>
 
@@ -55,7 +55,7 @@
 
     <div class="flex justify-center items-center md:w-[100%]">
       <div
-        class="md:flex md:w-[82%] md:flex-row md:gap-0 sm: flex sm: flex-col sm: gap-[20vh] sm: w-[82%] justify-between"
+        class="md:flex md:w-[82%] md:flex-row md:gap-0 sm: flex sm: flex-col sm: gap-[30vh] sm: w-[82%] justify-between"
       >
         <div class="md:text-[25px] sm:">
           <h1 class="font-extrabold md:text-[7vh] font-sans">
@@ -83,7 +83,7 @@
             </div>
 
             <div class="flex items-center shadow-2xl">
-              <h1 class="font-medium text-[3vh]">Watch video</h1>
+              <h1 class="font-medium md:text-[3vh]">Watch video</h1>
 
               <div
                 class="border-[1px] border-[#c0bebe] bg-[#fafafa] shadow-2xl rounded-[50%] flex items-center justify-center md:w-[3vw] md:h-[3vw] "
@@ -141,7 +141,7 @@
             </div>
           </div>
 
-          <div class="md:absolute md:bottom-[27vw] sm: absolute sm: bottom-[25vw] sm: right-[35vw]   md:right-[35vw]">
+          <div class="md:absolute md:bottom-[27vw] sm: absolute sm: bottom-[80vw] sm: right-[15vw]   md:right-[35vw]">
             <div
               class="text-[red] font-sans text-[2.5vh] flex items-center font-medium rounded-tr-sm bg-whitesmoke shadow-xl md:w-[11vw] pl-2 md:h-[5.2vh]"
             >
@@ -152,7 +152,7 @@
       </div>
     </div>
 
-    <div class="md:h-[18vh] sm: h-[19vh]"></div>
+    <div class="md:h-[18vh] sm: h-[16vh]"></div>
 
     <div class="sm: w-[100%] md:w-[100%] flex justify-center items-center">
       <div class="sm: w-[82%] md:w-[82%]">
