--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="flex items-center justify-between font-sans md:font-bold">
           <ul
-            class="md:z-auto md:static sm: text-black w-full left-0 md:w-auto md:py-0 py-0  md:pl-0 pl-7 absolute md:text-[black] md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500 sm: gap-3 md:gap-5 md:text-[2.5vh] md:flex md:items-center md:justify-between sm: font-serif sm: font-extrabold"
+            class="md:z-auto md:static sm: bg-cyan-500 sm: rounded md:rounded-none md:bg-white sm: z-[1] sm: text-white w-full left-0 md:w-auto md:py-0 py-4 md:pl-0 pl-7 absolute md:text-[black] md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500 sm: gap-3 md:gap-5 md:text-[2.5vh] md:flex md:items-center md:justify-between sm: font-serif sm: font-extrabold"
           >
             <li
               href="#"
@@ -91,7 +91,7 @@
       </div>
     </header>
 
-    <div class="md:h-[22vh] sm: h-[25vh]"></div>
+    <div class="md:h-[22vh] sm: h-[7vh]"></div>
 
     <div class="flex justify-center items-center md:w-[100%]">
       <div
@@ -182,7 +182,7 @@
           </div>
 
           <div
-            class="md:absolute md:bottom-[27vw] sm: absolute sm: bottom-[50vw] sm: right-[15vw] md:right-[35vw]"
+            class="md:absolute md:bottom-[27vw] sm: absolute sm: bottom-[80vw] sm: right-[15vw] md:right-[35vw]"
           >
             <div
               class="text-[red] font-sans text-[2.5vh] flex items-center font-medium rounded-tr-sm bg-whitesmoke shadow-xl md:w-[11vw] pl-2 md:h-[5.2vh]"
