--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
           </span>
         </nav>
 
-        <div class="flex items-center justify-between font-sans md:font-bold">
+        <div class="flex items-center justify-center font-sans md:font-bold">
           <ul
-            class="md:z-auto md:static sm: bg-cyan-500 sm: rounded md:rounded-none md:bg-white sm: z-[1] sm: text-white w-full left-0 md:w-auto md:py-0 py-4 md:pl-0 pl-7 absolute md:text-[black] md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500 sm: gap-3 md:gap-5 md:text-[2.5vh] md:flex md:items-center md:justify-between sm: font-serif sm: font-extrabold"
+            class="md:z-auto md:static sm: bg-cyan-500 sm: rounded md:rounded-none md:bg-white sm: z-[1] sm: text-white w-full left-0 md:w-auto md:py-0 py-4 md:pl-0 pl-7 absolute md:text-[black] md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500 sm: gap-3 md:gap-5 md:text-[2.5vh] md:flex items-center sm: flex sm: flex-col md:justify-between md:flex-row sm: font-serif sm: text-[3.5vh] sm: font-extrabold"
           >
             <li
               href="#"
               class="md:text-[#44cf44] hover:text-slate-950 duration-500"
             >
-              food
+              FOOD
             </li>
-            <li href="#" class="hover:text-slate-950 duration-500">crumps</li>
+            <li href="#" class="hover:text-slate-950 duration-500">CRUMPS</li>
             <li href="#" class="hover:text-slate-950 duration-500">
-              crunchie<span class="">s</span>
-            </li>
-            <li href="#" class="hover:text-slate-950 duration-500">
-              fried chicken
+              CRUNCHIES
             </li>
             <li href="#" class="hover:text-slate-950 duration-500">
-              hom<span class="">DEL</span>
+              FRIED CHICKEN
+            </li>
+            <li href="#" class="hover:text-slate-950 duration-500">
+              HOM<span class="">DEL</span>
             </li>
           </ul>
         </div>
